     [channels.c]
     use struct sockaddr_storage instead of struct sockaddr for accept(2)
     address argument. from visibilis AT yahoo.com in bz#1485; ok markus@
   - djm@cvs.openbsd.org 2008/07/13 22:16:03
     [sftp.c]
     increase number of piplelined requests so they properly fill the
     (recently increased) channel window. prompted by rapier AT psc.edu;
     ok markus@

20080712
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2008/07/12 04:52:50
     [channels.c]
     unbreak; move clearing of cctx struct to before first use
     reported by dkrause@
   - djm@cvs.openbsd.org 2008/07/12 05:33:41
     [scp.1]
     better description for -i flag:
     s/RSA authentication/public key authentication/

20080711
 - (djm) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2008/07/07 00:31:41
     [ttymodes.c]
     we don't need arg after the debug3() was removed.  from lint.
     ok djm@
   - stevesk@cvs.openbsd.org 2008/07/07 23:32:51
     [key.c]
     /*NOTREACHED*/ for lint warning:
       warning: function key_equal falls off bottom without returning value
     ok djm@
   - markus@cvs.openbsd.org 2008/07/10 18:05:58
     [channels.c]
     missing bzero; from mickey; ok djm@
   - markus@cvs.openbsd.org 2008/07/10 18:08:11
     [clientloop.c monitor.c monitor_wrap.c packet.c packet.h sshd.c]
     sync v1 and v2 traffic accounting; add it to sshd, too;
     ok djm@, dtucker@

20080709
 - (djm) [Makefile.in] Print "all tests passed" when all regress tests pass
 - (djm) [auth1.c] Fix format string vulnerability in protocol 1 PAM
   account check failure path. The vulnerable format buffer is supplied
   from PAM and should not contain attacker-supplied data.
 - (djm) [auth.c] Missing unistd.h for close()
 - (djm) [configure.ac] Add -Wformat-security to CFLAGS for gcc 3.x and 4.x

20080705
 - (djm) [auth.c] Fixed test for locked account on HP/UX with shadowed
   passwords disabled. bz#1083 report & patch from senthilkumar_sen AT
   hotpop.com, w/ dtucker@