@@ -15,6 +15,9 @@
      increase number of piplelined requests so they properly fill the
      (recently increased) channel window. prompted by rapier AT psc.edu;
      ok markus@
+ - (djm) [openbsd-compat/bindresvport.c] Rename variables s/sin/in/ to
+   avoid clash with sin(3) function; reported by
+   cristian.ionescu-idbohrn AT axis.com
 
 20080712
  - (djm) OpenBSD CVS Sync
@@ -4651,4 +4654,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5078 2008/07/14 01:29:24 djm Exp $
+$Id: ChangeLog,v 1.5079 2008/07/14 02:02:24 djm Exp $
